--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,16 @@ script:
    - docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
-  - docker build -t ioncretu80/multi-client ./client
-  - docker build -t ioncretu80/multi-nginx ./nginx
-  - docker build -t ioncretu80/multi-server ./server
-  - docker build -t ioncretu80/multi-worker ./worker
+  - docker build -t ioncretu809/multi-client ./client
+  - docker build -t ioncretu809/multi-nginx ./nginx
+  - docker build -t ioncretu809/multi-server ./server
+  - docker build -t ioncretu809/multi-worker ./worker
+
+  #Log in the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+
+  # Take this images and push them 
+  - docker push ioncretu809/multi-client ./client
+  - docker push  ioncretu809/multi-nginx ./nginx
+  - docker push  ioncretu809/multi-server ./server
+  - docker push  ioncretu809/multi-worker ./worker
