--- a/.travis.yml
+++ b/.travis.yml
@@ -2,25 +2,23 @@ sudo: required
 language: generic
 
 services:
-  -docker
+  - docker
 
 before_install:
-  - docker build -t ioncretu80/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t stephengrider/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-   - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true stephengrider/react-test npm test
 
 after_success:
   - docker build -t ioncretu809/multi-client ./client
   - docker build -t ioncretu809/multi-nginx ./nginx
   - docker build -t ioncretu809/multi-server ./server
   - docker build -t ioncretu809/multi-worker ./worker
-
-  #Log in the docker CLI
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
-
-  # Take this images and push them 
-  - docker push ioncretu809/multi-client ./client
-  - docker push  ioncretu809/multi-nginx ./nginx
-  - docker push  ioncretu809/multi-server ./server
-  - docker push  ioncretu809/multi-worker ./worker
+  # Take those images and push them to docker hub
+  - docker push ioncretu809/multi-client
+  - docker push ioncretu809/multi-nginx
+  - docker push ioncretu809/multi-server
+  - docker push ioncretu809/multi-worker
